# govql

./: .gitignore  AGENTS.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: mcp-server-release.yml  mcp-server.yml  us-congress.yml
docs/superpowers/plans/: 2026-07-09-mcp-curated-tools-v0.3.md  2026-07-09-vote-similarity-legislator-fks.md
mcp-server/: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml
mcp-server/docs/: design.md
mcp-server/src/govql_mcp_server/: __init__.py  __main__.py  graphql_client.py  logger.py  server.py
mcp-server/src/govql_mcp_server/tools/: _curated_shared.py  _discovery_shared.py  compare_voters.py  describe_type.py  find_legislator.py  find_party_defectors.py  find_vote.py  get_legislator.py  get_vote_with_positions.py  get_voting_record.py  introspection.py  list_types.py  passthrough.py
mcp-server/tests/: conftest.py  test_compare_voters.py  test_curated_shared.py  test_describe_type.py  test_find_legislator.py  test_find_party_defectors.py  test_find_vote.py  test_get_legislator.py  test_get_vote_with_positions.py  test_get_voting_record.py  test_graphql_client.py  test_introspection.py  test_list_types.py  test_no_stdout.py  test_passthrough.py
memory/: feedback_answer_dont_act.md
plans/: PLAN.md
plans/prds/: us-congress-continuous-delivery.md
plans/superpowers/plans/: 2026-07-09-mcp-curated-tools-v0.2.md  2026-07-09-mcp-curated-tools-v0.4.md  2026-07-09-vote-similarity-legislator-fks.md  2026-07-16-vote-similarity-cross-party-ranking.md
plans/tasks/: 0001-source-state-cursor-decoupled-stages.md  0002-pipeline-dag-manifest.md  0010-bills-connector-core.md  0011-bill-sub-entities.md  0012-connector-contract-refactor.md
us-congress/: .dockerignore  .env  .env.example  CHANGELOG.md  PIPELINE.md  README.md  compose.dev.yml  compose.yml
us-congress/db/: 002-member-party-agreement.sql  99-grafana-reader.sh  schema.sql
us-congress/deploy/: ci-deploy.sh  ci-deploy.test.js  deploy.sh  deploy.test.js  droplet.test.js  health-check-run.js  health-check.js  health-check.test.js  package-lock.json  package.json  prune-images.sh  prune-images.test.js  stamp-changelog-run.js  stamp-changelog-run.test.js  stamp-changelog.js  stamp-changelog.test.js  up.sh  up.test.js  workflow.test.js
us-congress/docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
us-congress/ingester/: CONNECTORS.md  Dockerfile  ingest_cron  package.json  pipeline.manifest.js
us-congress/nginx/: Dockerfile  nginx.conf
us-congress/postgraphile-server/: Dockerfile  db.js
us-congress/scraper/: Dockerfile  scrape_cron  update-legislators.sh  write-fetch-cursor.sh
us-congress/vector/: vector.toml
votes/: .env  .env.example  README.md  compose.yml
votes/ingester/: Dockerfile  package-lock.json  package.json
votes/nginx/: nginx.conf
votes/postgraphile-server/: package.json  rateLimit.js
votes/scraper/: Dockerfile  scrape_cron
votes/server/: Dockerfile  index.ts  package.json  tsconfig.json
votes/server2/: .dockerignore  Dockerfile  package-lock.json  package.json  rateLimit.js  schema.js  server.js
(+85 files in other folders)
